# rcurl

./: Cargo.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: rust.yml
.husky/: pre-commit  pre-push
src/: app.rs  args.rs  error.rs  lib.rs  main.rs
src/models/: client.rs  dns.rs  error.rs  headers.rs  http_version.rs  method.rs  mod.rs  request.rs  reqwest.rs  response.rs  url.rs
