[package]
edition = "2024"
name = "rcurl"
version = "0.1.0"

[dependencies]
anyhow = "1.0.97"
clap = {version = "4.5.34", features = ["derive"]}
env_logger = "0.11.7"
log = "0.4.27"
reqwest = {version = "0.12.15", features = ["json", "blocking"]}
thiserror = "2.0.12"

[features]
# default = ['reqwest']
default = ['beta']

reqwest = []

beta = []
