[package]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/liuhuo23/rcurl"
keywords = ["cli", "request", "beta"]
name = "rcurl"
repository = "https://github.com/liuhuo23/rcurl"
version = "0.0.1"

[dependencies]
anyhow = "1.0.97"
clap = {version = "4.5.34", features = ["derive"]}
env_logger = "0.11.8"
log = "0.4.27"
percent-encoding = "2.3.1"
thiserror = "2.0.12"

[features]
# default = ['reqwest']
default = ['beta']

beta = []
